remove VIVCOM from this project

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 # Folders maintained as seperate repos #
 ########################################
 boo
-findme
-politics
-winstagram
-images/instagram
-videos/instagram
 crontest
+findme
+images/instagram
+politics
+videos/instagram
+winstagram
 wip
+vivcom
